[package]
name = "hello-piston"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.49.0"
piston2d-graphics = "0.34.0"
pistoncore-glfw_window = "0.60.0"
piston2d-opengl_graphics = "0.68.0"
gfx = "0.18.1"
snowflake = "1.3.0"
specs = "0.15.0"
rand = "0.7.2"
rgoap = { git = "https://github.com/cmsd2/rgoap", rev = "8fdbd0883714f6b993bc2903b6c3f5b582e2dfd6" }
advancedresearch-utility_programming = "0.3.0"
pathfinding = "1.1.12"

[dependencies.tui]
version = "*"
default-features = false
features = []
