[package]
name = "hello-piston"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
snowflake = "1.3.0"
specs = { version = "0.15", default-features = false }
hibitset = { version = "0.6", default-features = false }
rand = "0.7.2"
rgoap = { git = "https://github.com/cmsd2/rgoap", rev = "8fdbd0883714f6b993bc2903b6c3f5b582e2dfd6" }
advancedresearch-utility_programming = "0.3.0"
pathfinding = "1.1.12"
doryen-fov = "0.1.1"
quicksilver = { version = "0.3.19", default-features = false, features = ["fonts"] }
tui = { version = "0.6.2", default-features = false }
tint = "1.0.1"
env_logger = "0.7.0"
log = "0.4.8"

[patch.crates-io]
# https://github.com/slide-rs/specs/issues/642
shred = { git = "https://github.com/mystal/shred.git", branch = "fix_no_parallel", default-features = false }
